client/src/westbankstyle.css
body {
  background-color: #FDFDFD;
  font-size: 12px;
  letter-spacing: 0.2em;
}

a {
  color: black;
}

.row {
  margin-right: 0;
  margin-left: 0;
}

.container {
  padding: 0;
  /*margin-top: 10px;*/
  width: 100%;
  /*border: solid rgba(128, 128, 128, 0.2) 2px;*/
}

.currentfont {
  font-family: 'Jura', sans-serif;
  font-weight: 500;
}

.itally {
  font-style: italic;
}

.biggest {
  font-size: 30px;
}

.bigger {
  font-size: 20px;
}

.big {
  font-size: 18px;
}

.smaller {
  font-size: 12px;
}

.fade-half {
  opacity: 0.5;
}

.fade-bold {
  color: red;
  font-size: 18px;
}

.fade-none {
  opacity: 1.0;
}

.white {
  color: white;
}

.black {
  color: black;
}

.grey {
  color: grey;
}

.red {
  color: red;
}

.shadow {
  text-shadow: 5px 5px 5px black;
}

.displayInline {
  /*display: inline-block;*/
  margin-left: auto;
  margin-right: auto;
  flex-direction: row;
}

.navbar {
  font-size: 15px;
  padding: 0 1em;
  border-radius: 0;
  margin-bottom: 0;
}

.navbar-toggler-icon {
  padding-top: 5px;
  width: 100%;
  height: 100%;
}

.navborder {
  /*border: 0;*/
}

.navbar-brand {
  padding: 0;
  margin: 0;
}

.navpad {
  /*padding-top: 5em;*/
}

.borderShadow {
  box-shadow: 0px 0px 25px 0px #333;
}

.projtitle {
  padding-bottom: 10px;
  border-bottom: 2px solid rgba(242, 242, 242, 1);
}

.logoinit {
  /* background: url("./pics/WPlogo.png") no-repeat center; */
  width: auto;
  height: 95%;
  /* background-size: contain; */
}

.seclogo {
  width: 100%;
  height: 150px;
}

.miniLogo {
  width: auto;
  height: 10vh;
  position: absolute;
  bottom: 7vh;
  right: 4vw;
}

.landingPic {
  width: 100%;
}

.landingTextImage1 {
  width: 90%;
  max-width: 500px;
  position: absolute;
  left: 4vw;
  top: 1vh;
}

.landingTextImage2 {
  width: 30%;
  max-width: 300px;
  position: absolute;
  right: 4vw;
  bottom: 4vh;
}

.landingText1 {
  text-shadow: 2px 2px black;
  position: absolute;
  left: 50vw;
}

.landingText2 {
  text-shadow: 2px 2px black;
  position: absolute;
  top: 25vh;
  left: 50vw;
}

.topRight {
  position: absolute;
  top: 3vh;
  right: 7vw;
}

.bgcover {
  background-size: cover;
  width: 100%;
  height: 100%;
}

.projbox {
  width: 100%;
  height: 200px;
  padding-bottom: 15px;
  margin-top: 30px;
  font-weight: bold;
  background-size: cover;
}

.projIndimg {
  width: 100%;
  margin-bottom: 30px;
  /* padding: 10px 20px; */
}

.projboxx {
  width: 20px;
  height: 20px;
  /* background-color: red; */
  /* border: solid black; */
}

.projimg {
  width: 100%;
  max-width: 300px;
  height: 200px;
  /*margin-bottom: 30px;*/
  padding: 5px;
  image-rendering: pixelated;
}

.imgAddConfirm {
  width: 75%;
  max-width: 200px;
  margin-bottom: 20px;
}

.padtop {
  margin-top: 10px;
}

.padtop2 {
  margin-top: 20px;
}

.padtop3 {
  margin-top: 50px;
}

.padbottom {
  margin-bottom: 20px;
}

.padbottom2 {
  margin-bottom: 30px;
}

.padInsides {
  padding: 20px;
}

.padsides {
  margin-right: 10px;
  margin-left: 10px;
}

.overflows {
  overflow: hidden;
}

.fullSize {
  width: 100%;
}

li {
  padding-left: 30px;
}

.uppercase {
  text-transform: uppercase;
}

.hideit {
  display: none;
}

.squeeze {
  padding-left: 20px;
  padding-right: 20px;
}

